[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/temp/gray.png" type="Texture" id=1]
[ext_resource path="res://minigames/SortingMinigame/SortingMinigame.gd" type="Script" id=2]
[ext_resource path="res://minigames/SortingMinigame/objects/Conveyor.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/components/EnergyBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://minigames/SortingMinigame/objects/CollectionArea.tscn" type="PackedScene" id=5]
[ext_resource path="res://minigames/SortingMinigame/objects/Incinerator.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/components/EmissionBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://minigames/SortingMinigame/EndScreen.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/fonts/roboto_24.tres" type="DynamicFont" id=9]
[ext_resource path="res://UI/menu/MenuButton.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/UI/icons/trash icons/metal_trash_icon.png" type="Texture" id=11]
[ext_resource path="res://assets/UI/icons/trash icons/plastic_trash_icon.png" type="Texture" id=12]
[ext_resource path="res://assets/UI/icons/trash icons/glass_trash_icon.png" type="Texture" id=13]
[ext_resource path="res://assets/UI/icons/trash icons/paper_trash_icon.png" type="Texture" id=14]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 9 )

[node name="SortingMinigame" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 349.583 ]
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 0, 329.172 )
scale = Vector2( 2.3454, 2.71225 )
z_index = -1
texture = ExtResource( 1 )
centered = false

[node name="Trash" type="Node2D" parent="."]
z_index = 1

[node name="CollectionAreas" type="Node2D" parent="."]

[node name="PaperCollectionArea" parent="CollectionAreas" instance=ExtResource( 5 )]
position = Vector2( 75.396, 495.578 )

[node name="PlasticCollectionArea2" parent="CollectionAreas" instance=ExtResource( 5 )]
position = Vector2( 75.396, 836.588 )
collection_type = "plastic"

[node name="GlassCollectionArea3" parent="CollectionAreas" instance=ExtResource( 5 )]
position = Vector2( 520.476, 495.578 )
collection_type = "glass"

[node name="MetalCollectionArea4" parent="CollectionAreas" instance=ExtResource( 5 )]
position = Vector2( 520.476, 836.588 )
collection_type = "metal"

[node name="Incinerator" parent="." instance=ExtResource( 6 )]
position = Vector2( 296.351, 174.938 )
scale = Vector2( 0.5, 0.5 )

[node name="SpawnPoints" type="Node" parent="."]

[node name="TrashSpawn1" type="Position2D" parent="SpawnPoints"]
position = Vector2( 223.793, 1041.99 )

[node name="TrashSpawn2" type="Position2D" parent="SpawnPoints"]
position = Vector2( 294.902, 1066.02 )

[node name="TrashSpawn3" type="Position2D" parent="SpawnPoints"]
position = Vector2( 358.661, 1041.99 )

[node name="SpawnTimer" type="Timer" parent="."]

[node name="Conveyor" parent="." instance=ExtResource( 3 )]
position = Vector2( 297.223, 687.492 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="EnergyBar" parent="UI" instance=ExtResource( 4 )]
anchor_left = 0.0377668
anchor_top = 0.0819491
anchor_right = 0.109433
anchor_bottom = 0.276284
margin_right = 1.99998
margin_bottom = 1.00024
value = 1000

[node name="EmissionBar" parent="UI" instance=ExtResource( 7 )]
anchor_left = 0.132059
anchor_top = 0.0819491
anchor_right = 0.207059
anchor_bottom = 0.279214
margin_bottom = -2.0

[node name="EndScreen" parent="UI" instance=ExtResource( 8 )]
visible = false

[node name="ScoreDisplay" type="HBoxContainer" parent="UI"]
anchor_left = 0.214011
anchor_top = 0.0166016
anchor_right = 0.790678
anchor_bottom = 0.0664063
theme = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PaperScore" type="HBoxContainer" parent="UI/ScoreDisplay"]
margin_right = 83.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PaperTrashIcon" type="TextureRect" parent="UI/ScoreDisplay/PaperScore"]
margin_right = 51.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
texture = ExtResource( 14 )
expand = true
stretch_mode = 6

[node name="PaperScoreLabel" type="Label" parent="UI/ScoreDisplay/PaperScore"]
margin_left = 55.0
margin_top = 11.0
margin_right = 83.0
margin_bottom = 40.0
size_flags_horizontal = 3
text = "10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlasticScore" type="HBoxContainer" parent="UI/ScoreDisplay"]
margin_left = 87.0
margin_right = 171.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlasticTrashIcon" type="TextureRect" parent="UI/ScoreDisplay/PlasticScore"]
margin_right = 52.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
texture = ExtResource( 12 )
expand = true
stretch_mode = 6

[node name="PlasticScoreLabel" type="Label" parent="UI/ScoreDisplay/PlasticScore"]
margin_left = 56.0
margin_top = 11.0
margin_right = 84.0
margin_bottom = 40.0
size_flags_horizontal = 3
text = "10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GlassScoreDisplay" type="HBoxContainer" parent="UI/ScoreDisplay"]
margin_left = 175.0
margin_right = 258.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GlassTrashIcon" type="TextureRect" parent="UI/ScoreDisplay/GlassScoreDisplay"]
margin_right = 51.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
texture = ExtResource( 13 )
expand = true
stretch_mode = 6

[node name="GlassScoreLabel" type="Label" parent="UI/ScoreDisplay/GlassScoreDisplay"]
margin_left = 55.0
margin_top = 11.0
margin_right = 83.0
margin_bottom = 40.0
size_flags_horizontal = 3
text = "10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MetalScoreDisplay" type="HBoxContainer" parent="UI/ScoreDisplay"]
margin_left = 262.0
margin_right = 346.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MetalTrashIcon" type="TextureRect" parent="UI/ScoreDisplay/MetalScoreDisplay"]
margin_right = 52.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="MetalScoreLabel" type="Label" parent="UI/ScoreDisplay/MetalScoreDisplay"]
margin_left = 56.0
margin_top = 11.0
margin_right = 84.0
margin_bottom = 40.0
size_flags_horizontal = 3
text = "10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" parent="UI" instance=ExtResource( 10 )]
anchor_left = 0.0062498
anchor_top = 0.00429387
anchor_right = 0.0895831
anchor_bottom = 0.053122

[node name="DebugCam" type="Camera2D" parent="."]
position = Vector2( 294.822, 836.588 )
